--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <img src="/data/images/Rendani_Logo.png" alt="Rendani's Logo" loading="lazy">
         </a>
         <div class="nav-menu">
-            <a class="nav-link" href="/apps/corebell-engine/">Corebell Engine</a>
+            <a class="nav-link" href="/apps/vault-engine/">Vault Engine</a>
             <a class="nav-link" href="/pages/services/">Services</a>
             <a class="nav-link" href="/pages/blog/">Blog</a>
         </div>
