--- a/apps/vault-engine/index.html
+++ b/apps/vault-engine/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vault 3D Web Engine</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
+    <!-- 🚀 High-Speed CDNs -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+
+    <script defer src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/three@0.154.0/build/three.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/three@0.154.0/examples/js/controls/OrbitControls.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/three@0.154.0/examples/js/loaders/GLTFLoader.js"></script>
+
     <style>
         :root {
             --primary-color: #00f7ff;
@@ -14,311 +22,79 @@
             --accent-color: #ff00e5;
             --text-color: #e0e0e0;
             --background-color: #050922;
-            --card-bg: rgba(13, 20, 48, 0.7);
-            --neon-shadow: 0 0 10px rgba(0, 247, 255, 0.5);
-            --card-border: 1px solid rgba(0, 247, 255, 0.1);
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
         }
 
         body {
-            font-family: 'Segoe UI', Roboto, sans-serif;
-            line-height: 1.6;
-            color: var(--text-color);
             background-color: var(--background-color);
-            background-image: 
-                radial-gradient(circle at 20% 20%, rgba(0, 247, 255, 0.05) 0%, transparent 50%),
-                radial-gradient(circle at 80% 80%, rgba(255, 0, 229, 0.05) 0%, transparent 50%);
-            min-height: 100vh;
-        }
-
-        .hero {
-            background: linear-gradient(135deg, rgba(11, 28, 61, 0.9), rgba(5, 9, 34, 0.9));
-            padding: 6rem 2rem;
-            text-align: center;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: 
-                linear-gradient(45deg, transparent 48%, var(--primary-color) 49%, transparent 51%),
-                linear-gradient(-45deg, transparent 48%, var(--primary-color) 49%, transparent 51%);
-            background-size: 60px 60px;
-            opacity: 0.1;
-            animation: gridMove 20s linear infinite;
-        }
-
-        @keyframes gridMove {
-            0% { background-position: 0 0; }
-            100% { background-position: 60px 60px; }
-        }
-
-        .hero h1 {
-            font-size: 4rem;
-            margin-bottom: 1rem;
-            position: relative;
-            z-index: 2;
-            text-shadow: 0 0 20px rgba(0, 247, 255, 0.5);
-            animation: glow 2s ease-in-out infinite alternate;
-        }
-
-        @keyframes glow {
-            from { text-shadow: 0 0 10px var(--primary-color), 0 0 20px var(--primary-color); }
-            to { text-shadow: 0 0 20px var(--primary-color), 0 0 30px var(--primary-color); }
-        }
-
-        .hero p {
-            font-size: 1.5rem;
-            opacity: 0.9;
-            max-width: 600px;
-            margin: 0 auto;
-            position: relative;
-            z-index: 2;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 2rem;
-        }
-
-        .feature-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            margin: 3rem 0;
-        }
-
-        .feature-card {
-            background: var(--card-bg);
-            padding: 2rem;
-            border-radius: 15px;
-            border: var(--card-border);
-            box-shadow: var(--neon-shadow);
-            transition: all 0.3s ease;
-            backdrop-filter: blur(10px);
-            position: relative;
-            overflow: hidden;
-        }
-
-        .feature-card::before {
-            content: '';
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(circle, rgba(255,255,255,0.1) 0%, transparent 70%);
-            transform: rotate(0deg);
-            transition: transform 0.5s ease;
-        }
-
-        .feature-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 0 20px rgba(0, 247, 255, 0.7);
-        }
-
-        .feature-card:hover::before {
-            transform: rotate(180deg);
-        }
-
-        .feature-icon {
-            font-size: 2.5rem;
-            color: var(--primary-color);
-            margin-bottom: 1rem;
-            text-shadow: 0 0 10px rgba(0, 247, 255, 0.5);
-        }
-
-        .feature-card h3 {
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-            color: var(--primary-color);
-        }
-
-        .specs {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 2rem;
-            margin: 3rem 0;
-            text-align: center;
-        }
-
-        .spec-item {
-            background: var(--card-bg);
-            padding: 2rem;
-            border-radius: 15px;
-            border: var(--card-border);
-            box-shadow: var(--neon-shadow);
-            position: relative;
-            overflow: hidden;
-        }
-
-        .spec-value {
-            font-size: 2.5rem;
-            font-weight: bold;
-            color: var(--primary-color);
-            margin-bottom: 0.5rem;
-            text-shadow: 0 0 10px rgba(0, 247, 255, 0.5);
-        }
-
-        .cta-button {
-            display: inline-block;
-            background: transparent;
-            color: var(--primary-color);
-            padding: 1rem 2rem;
-            border: 2px solid var(--primary-color);
-            border-radius: 5px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: all 0.3s ease;
-            margin-top: 2rem;
-            position: relative;
-            overflow: hidden;
-            z-index: 1;
-        }
-
-        .cta-button::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(
-                90deg,
-                transparent,
-                rgba(0, 247, 255, 0.2),
-                transparent
-            );
-            transition: left 0.5s ease;
-            z-index: -1;
-        }
-
-        .cta-button:hover {
-            box-shadow: 0 0 20px rgba(0, 247, 255, 0.5);
-            background: rgba(0, 247, 255, 0.1);
-        }
-
-        .cta-button:hover::before {
-            left: 100%;
-        }
-
-        footer {
-            background: var(--secondary-color);
             color: var(--text-color);
-            text-align: center;
-            padding: 2rem;
-            margin-top: 4rem;
-            border-top: var(--card-border);
+            font-family: 'Segoe UI', Roboto, sans-serif;
         }
 
-        @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 2.5rem;
-            }
-
-            .hero p {
-                font-size: 1.2rem;
-            }
-
-            .feature-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .specs {
-                grid-template-columns: 1fr;
-            }
+        #scene-container {
+            width: 100vw;
+            height: 100vh;
+            overflow: hidden;
         }
     </style>
 </head>
 <body>
     <header class="hero">
-        <h1 class="animate__animated animate__backInDown">Vault 3D Web Engine</h1>
-        <p class="animate__animated animate__fadeIn animate__delay-1s">The next generation of web-based game development</p>
-        <a href="#" class="cta-button animate__animated animate__fadeIn animate__delay-2s">Get Started</a>
+        <h1 class="animate__animated animate__fadeIn">Vault 3D Web Engine</h1>
+        <p class="animate__animated animate__fadeIn animate__delay-1s">Experience the future of web 3D</p>
     </header>
-    <main class="container">
-        <div class="feature-grid">
-            <div class="feature-card" data-aos="fade-up">
-                <div class="feature-icon">
-                    <i class="fas fa-bolt"></i>
-                </div>
-                <h3>High Performance</h3>
-                <p>Built for speed with WebGL 2.0 and WebAssembly optimization, delivering desktop-quality graphics in the browser.</p>
-            </div>
-            <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
-                <div class="feature-icon">
-                    <i class="fas fa-cubes"></i>
-                </div>
-                <h3>Modern Physics</h3>
-                <p>Advanced physics engine with real-time collision detection, rigid body dynamics, and particle systems.</p>
-            </div>
-            <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
-                <div class="feature-icon">
-                    <i class="fas fa-code"></i>
-                </div>
-                <h3>Easy Integration</h3>
-                <p>Simple API design with extensive documentation. Import your 3D models and start creating in minutes.</p>
-            </div>
-        </div>
-        <div class="specs">
-            <div class="spec-item" data-aos="zoom-in">
-                <div class="spec-value">60+ FPS</div>
-                <p>Smooth Performance</p>
-            </div>
-            <div class="spec-item" data-aos="zoom-in" data-aos-delay="100">
-                <div class="spec-value">&lt; 50KB</div>
-                <p>Core Engine Size</p>
-            </div>
-            <div class="spec-item" data-aos="zoom-in" data-aos-delay="200">
-                <div class="spec-value">WebGL 2.0</div>
-                <p>Graphics API</p>
-            </div>
-        </div>
-        <div class="feature-grid">
-            <div class="feature-card" data-aos="fade-up">
-                <div class="feature-icon">
-                    <i class="fas fa-mobile-alt"></i>
-                </div>
-                <h3>Cross-Platform</h3>
-                <p>Runs smoothly on desktop and mobile browsers with adaptive performance settings.</p>
-            </div>
-            <div class="feature-card" data-aos="fade-up" data-aos-delay="100">
-                <div class="feature-icon">
-                    <i class="fas fa-tools"></i>
-                </div>
-                <h3>Developer Tools</h3>
-                <p>Comprehensive debugging tools, scene editor, and asset management system included.</p>
-            </div>
-            <div class="feature-card" data-aos="fade-up" data-aos-delay="200">
-                <div class="feature-icon">
-                    <i class="fas fa-users"></i>
-                </div>
-                <h3>Community Driven</h3>
-                <p>Active community with regular updates, plugins, and shared resources.</p>
-            </div>
-        </div>
+
+    <main>
+        <div id="scene-container"></div>
     </main>
-    <footer>
-        <p>2025 &copy; Rendani Manugeni</p>
-    </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+
     <script>
-        AOS.init({
-            duration: 1000,
-            once: true
+        AOS.init({ duration: 1000, once: true });
+
+        // 🚀 Advanced Three.js Scene
+        let scene, camera, renderer, controls;
+        function init() {
+            scene = new THREE.Scene();
+            scene.background = new THREE.Color(0x050922);
+
+            camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+            camera.position.set(0, 1, 3);
+
+            renderer = new THREE.WebGLRenderer({ antialias: true });
+            renderer.setSize(window.innerWidth, window.innerHeight);
+            renderer.setPixelRatio(window.devicePixelRatio);
+            renderer.shadowMap.enabled = true;
+            document.getElementById('scene-container').appendChild(renderer.domElement);
+
+            controls = new THREE.OrbitControls(camera, renderer.domElement);
+            controls.enableDamping = true;
+
+            // Lighting
+            const light = new THREE.DirectionalLight(0xffffff, 1);
+            light.position.set(5, 5, 5);
+            scene.add(light);
+
+            // Load 3D Model
+            const loader = new THREE.GLTFLoader();
+            loader.load('https://yourcdn.com/assets/model.glb', function(gltf) {
+                scene.add(gltf.scene);
+            });
+
+            animate();
+        }
+
+        function animate() {
+            requestAnimationFrame(animate);
+            controls.update();
+            renderer.render(scene, camera);
+        }
+
+        window.addEventListener('resize', () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
         });
+
+        init();
     </script>
 </body>
 </html>
