--- a/apps/vault-engine/index.html
+++ b/apps/vault-engine/index.html
@@ -3,39 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vault 3D Web Engine</title>
+    <title>Vault | Web Engine | Rendani</title>
+    <link rel="icon" href="/data/images/favicon.png">
     
     <!-- 🚀 High-Speed CDNs -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="styles.css">
 
-    <script defer src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/three@0.154.0/build/three.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/three@0.154.0/examples/js/controls/OrbitControls.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/three@0.154.0/examples/js/loaders/GLTFLoader.js"></script>
-
-    <style>
-        :root {
-            --primary-color: #00f7ff;
-            --secondary-color: #0b1c3d;
-            --accent-color: #ff00e5;
-            --text-color: #e0e0e0;
-            --background-color: #050922;
-        }
-
-        body {
-            background-color: var(--background-color);
-            color: var(--text-color);
-            font-family: 'Segoe UI', Roboto, sans-serif;
-        }
-
-        #scene-container {
-            width: 100vw;
-            height: 100vh;
-            overflow: hidden;
-        }
-    </style>
+    <script defer src="cdn-loader.js"></script>
+    <script defer src="app.js"></script>
+    <script defer src="aos-init.js"></script>
 </head>
 <body>
     <header class="hero">
@@ -48,53 +30,15 @@
     </main>
 
     <script>
-        AOS.init({ duration: 1000, once: true });
-
-        // 🚀 Advanced Three.js Scene
-        let scene, camera, renderer, controls;
-        function init() {
-            scene = new THREE.Scene();
-            scene.background = new THREE.Color(0x050922);
-
-            camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-            camera.position.set(0, 1, 3);
-
-            renderer = new THREE.WebGLRenderer({ antialias: true });
-            renderer.setSize(window.innerWidth, window.innerHeight);
-            renderer.setPixelRatio(window.devicePixelRatio);
-            renderer.shadowMap.enabled = true;
-            document.getElementById('scene-container').appendChild(renderer.domElement);
-
-            controls = new THREE.OrbitControls(camera, renderer.domElement);
-            controls.enableDamping = true;
-
-            // Lighting
-            const light = new THREE.DirectionalLight(0xffffff, 1);
-            light.position.set(5, 5, 5);
-            scene.add(light);
-
-            // Load 3D Model
+        // Load model from CDN
+        document.addEventListener("DOMContentLoaded", function() {
             const loader = new THREE.GLTFLoader();
-            loader.load('https://yourcdn.com/assets/model.glb', function(gltf) {
+            loader.load('https://cdn.jsdelivr.net/gh/your-cdn-repo/models/sample-model.glb', function(gltf) {
+                const scene = new THREE.Scene();
                 scene.add(gltf.scene);
+                console.log("Model Loaded from CDN");
             });
-
-            animate();
-        }
-
-        function animate() {
-            requestAnimationFrame(animate);
-            controls.update();
-            renderer.render(scene, camera);
-        }
-
-        window.addEventListener('resize', () => {
-            camera.aspect = window.innerWidth / window.innerHeight;
-            camera.updateProjectionMatrix();
-            renderer.setSize(window.innerWidth, window.innerHeight);
         });
-
-        init();
     </script>
 </body>
 </html>
