--- a/apps/vault-engine/index.html
+++ b/apps/vault-engine/index.html
@@ -150,7 +150,7 @@
 
     <main class="coming-soon">
         <h1>Coming Soon</h1>
-        <p>We're working hard to bring you something amazing. Stay tuned for updates about my Blog.</p>
+        <p>We're working hard to bring you something amazing. Stay tuned for updates about Vault Engine.</p>
 
         <div class="social-links">
             <a href="https://twitter.com/callmerendani" target="_blank" aria-label="Twitter">
