--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Rendani a tech enthusiast.</title>
+    <title>Home | Rendani a tech enthusiast</title>
+    <link rel="icon" type="image/png" href="/data/images/favicon.png">
     <link href="https://unpkg.com/@fontsource/inter@4.5.0/index.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root {
+               :root {
             --primary: #2A2A2A;
             --secondary: #1A1A1A;
             --accent: #00FF88;
@@ -150,7 +151,7 @@
 <body>
     <nav class="glass-container">
         <div class="nav-links">
-            <h2>MG</h2>
+            <img src="/data/images/Rendani_Logo.png" alt="Rendani Logo" style="height: 40px;">
             <div>
                 <a href="#projects">Projects</a>
                 <a href="#skills">Skills</a>
@@ -161,7 +162,7 @@
 
     <section class="hero">
         <div class="glass-container">
-            <h1>Manu Geni</h1>
+            <h1>Rendani aka Mr. Blane</h1>
             <p>Full-Stack Developer & Tech Enthusiast</p>
             <div class="tech-grid">
                 <div class="tech-card">React</div>
@@ -182,9 +183,15 @@
     </section>
 
     <div class="social-links">
-        <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
-        <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
-        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/manugeni" class="social-icon" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-github"></i>
+        </a>
+        <a href="https://twitter.com/callmerendani" class="social-icon" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://facebook.com/callmerendani" class="social-icon" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-facebook"></i>
+        </a>
     </div>
 </body>
 </html>
