--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Rendani a tech enthusiast</title>
+    <script src="/data/js/main.js" defer></script>
     <link rel="icon" type="image/png" href="/data/images/favicon.png">
     <link href="https://unpkg.com/@fontsource/inter@4.5.0/index.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
