--- a/index.html
+++ b/index.html
@@ -5,149 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Rendani a tech enthusiast</title>
     <script src="/data/js/main.js" defer></script>
+    <link rel="stylesheet" href="/data/css/main.css">
     <link rel="icon" type="image/png" href="/data/images/favicon.png">
     <link href="https://unpkg.com/@fontsource/inter@4.5.0/index.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <style>
-               :root {
-            --primary: #2A2A2A;
-            --secondary: #1A1A1A;
-            --accent: #00FF88;
-            --text: #FFFFFF;
-            --code-bg: #0D0D0D;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Inter', sans-serif;
-        }
-
-        body {
-            background: var(--primary);
-            color: var(--text);
-            line-height: 1.6;
-            overflow-x: hidden;
-        }
-
-        .glass-container {
-            background: rgba(25, 25, 25, 0.4);
-            backdrop-filter: blur(10px);
-            border-radius: 15px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            padding: 2rem;
-            margin: 2rem;
-        }
-
-        nav {
-            padding: 1.5rem 5%;
-            background: var(--secondary);
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .nav-links {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .hero {
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            padding: 0 5%;
-            margin-top: -4rem;
-        }
-
-        .hero h1 {
-            font-size: 4rem;
-            background: linear-gradient(45deg, var(--accent), #00CCFF);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            margin-bottom: 1rem;
-        }
-
-        .tech-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 1.5rem;
-            padding: 2rem 0;
-        }
-
-        .tech-card {
-            background: var(--secondary);
-            padding: 1.5rem;
-            border-radius: 10px;
-            text-align: center;
-            transition: transform 0.3s ease;
-        }
-
-        .tech-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .projects {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            padding: 4rem 5%;
-        }
-
-        .project-card {
-            background: var(--secondary);
-            border-radius: 15px;
-            padding: 1.5rem;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .project-card::before {
-            content: '';
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: linear-gradient(45deg, transparent, var(--accent), transparent);
-            animation: animate 4s linear infinite;
-        }
-
-        @keyframes animate {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        .social-links {
-            display: flex;
-            gap: 1.5rem;
-            justify-content: center;
-            padding: 2rem 0;
-        }
-
-        .social-icon {
-            font-size: 1.5rem;
-            color: var(--text);
-            transition: color 0.3s ease;
-        }
-
-        .social-icon:hover {
-            color: var(--accent);
-        }
-
-        @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 2.5rem;
-            }
-            
-            .tech-grid {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
-    </style>
 </head>
 <body>
     <nav class="glass-container">
