--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Rendani a tech enthusiast</title>
-    <script src="/data/js/main.js" defer></script>
-    <link rel="stylesheet" href="/data/css/main.css">
     <link rel="icon" type="image/png" href="/data/images/favicon.png">
     <link href="https://unpkg.com/@fontsource/inter@4.5.0/index.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="/data/css/main.css">
 </head>
 <body>
     <nav class="glass-container">
         <div class="nav-links">
-            <img src="/data/images/Rendani_Logo.png" alt="Rendani Logo" style="height: 40px;">
+            <img src="/data/images/Rendani_Logo.png" alt="Rendani Logo">
             <div>
-                <a href="#projects">Projects</a>
-                <a href="#skills">Skills</a>
-                <a href="#contact">Contact</a>
+                <a href="/">Home</a>
+                <a href="/projects/">Projects</a>
+                <a href="/contact/">Contact</a>
             </div>
         </div>
     </nav>
@@ -35,15 +34,6 @@
         </div>
     </section>
 
-    <section id="projects" class="projects">
-        <div class="project-card">
-            <h3>Project 1</h3>
-            <p>AI-powered application with real-time analytics</p>
-            <div class="tech-stack">React, TensorFlow, FastAPI</div>
-        </div>
-        <!-- Add more project cards -->
-    </section>
-
     <div class="social-links">
         <a href="https://github.com/manugeni" class="social-icon" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-github"></i>
@@ -55,5 +45,7 @@
             <i class="fab fa-facebook"></i>
         </a>
     </div>
+
+    <script src="/data/js/main.js" defer></script>
 </body>
 </html>
