--- a/projects/index.html
+++ b/projects/index.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects | Rendani a tech enthusiast</title>
+    <link rel="icon" type="image/png" href="/data/images/favicon.png">
+    <link href="https://unpkg.com/@fontsource/inter@4.5.0/index.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="/data/css/main.css">
+</head>
+<body>
+    <nav class="glass-container">
+        <div class="nav-links">
+            <img src="/data/images/Rendani_Logo.png" alt="Rendani Logo">
+            <div>
+                <a href="/">Home</a>
+                <a href="/projects/">Projects</a>
+                <a href="/contact/">Contact</a>
+            </div>
+        </div>
+    </nav>
 
+    <main class="projects-page">
+        <section class="hero">
+            <div class="glass-container">
+                <h1>My Projects</h1>
+                <p>Explore my latest creations and works in progress.</p>
+            </div>
+        </section>
+
+        <section id="projects" class="projects">
+            <div class="search-container">
+                <input type="text" id="project-search" placeholder="Search projects by name, description, or tags...">
+                <i class="fas fa-search"></i>
+            </div>
+            <div id="projects-container" class="projects-grid"></div>
+        </section>
+    </main>
+
+    <div class="social-links">
+        <a href="https://github.com/manugeni" class="social-icon" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-github"></i>
+        </a>
+        <a href="https://twitter.com/callmerendani" class="social-icon" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://facebook.com/callmerendani" class="social-icon" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-facebook"></i>
+        </a>
+    </div>
+
+    <script src="/data/js/projects.js" defer></script>
+</body>
+</html>
