--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="glass-container">
             <h1>Rendani aka Mr. Blane</h1>
             <p>Full-Stack Developer & Tech Enthusiast</p>
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/Go78C1YBXaE?si=Wwx2NR2syyYe_Y81" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
             <div class="tech-grid">
                 <div class="tech-card">React</div>
                 <div class="tech-card">Node.js</div>
