--- a/index.html
+++ b/index.html
@@ -3,52 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Rendani a tech enthusiast</title>
+    <title>Explore - Unleashed | Creative Developer</title>
     <link rel="icon" type="image/png" href="/data/images/favicon.png">
-    <link href="https://unpkg.com/@fontsource/inter@4.5.0/index.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/data/css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="glass-container">
-        <div class="nav-links">
-            <img src="/data/images/Rendani_Logo.png" alt="Rendani Logo">
-            <div>
-                <a href="/">Home</a>
-                <a href="/projects/">Projects</a>
-                <a href="/contact/">Contact</a>
-            </div>
-        </div>
-    </nav>
-
-    <section class="hero">
-        <div class="glass-container">
-            <h1>Rendani aka Mr. Blane</h1>
-            <p>Full-Stack Developer & Tech Enthusiast</p>
+    <header>
+        <nav>
+            <a href="/"><img src="/data/images/Rendani_Logo.png" alt="Logo" class="logo"></a>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/projects/">Projects</a></li>
+                <li><a href="/contact/">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="hero">
+            <h1>Welcome to My World</h1>
+            <p>I'm Rendani, a developer crafting immersive digital experiences.</p>
+            <a href="/projects/" class="btn">Explore Projects</a>
+        </section>
+        <section id="favorite-video">
+            <h2>My Favorite Inspiration</h2>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/Go78C1YBXaE?si=Wwx2NR2syyYe_Y81" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/jZlq1ALRHX" frameborder="0" allowfullscreen></iframe>
             </div>
-            <div class="tech-grid">
-                <div class="tech-card">React</div>
-                <div class="tech-card">Node.js</div>
-                <div class="tech-card">Python</div>
-                <div class="tech-card">AWS</div>
-            </div>
-        </div>
-    </section>
-
-    <div class="social-links">
-        <a href="https://github.com/manugeni" class="social-icon" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-github"></i>
-        </a>
-        <a href="https://twitter.com/callmerendani" class="social-icon" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-twitter"></i>
-        </a>
-        <a href="https://facebook.com/callmerendani" class="social-icon" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-facebook"></i>
-        </a>
-    </div>
-
-    <script src="/data/js/main.js" defer></script>
+            <p>King Vader's "When You Don’t Know Who You’re Robbin Pt. 2" - A vibe worth watching!</p>
+        </section>
+    </main>
+    <footer>
+        <p>© 2025 Rendani</p>
+    </footer>
 </body>
 </html>
