--- a/projects/index.html
+++ b/projects/index.html
@@ -27,25 +27,25 @@
                 <p>Chat with AI models in real-time.</p>
                 <p><strong>Tech:</strong> AI, Chat, Real-time</p>
                 <a href="https://github.com/manugeni" target="_blank">GitHub</a>
-                <a href="https://huggingface.co/manugeni" target="_blank">Hugging Face</a>
+                <a href="https://github.com/manugeni/Inter-Chat/" target="_blank">Hugging Face</a>
             </div>
             <div class="project">
                 <h3>Vault Engine <span class="coming-soon">(Coming Soon)</span></h3>
                 <p>3D web engine for creating immersive experiences.</p>
                 <p><strong>Tech:</strong> 3D, WebGL, Engine</p>
-                <a href="https://github.com/manugeni" target="_blank">GitHub</a>
+                <a href="https://github.com/manugeni/VaultEngine/" target="_blank">GitHub</a>
             </div>
             <div class="project">
                 <h3>VirtuXperience <span class="coming-soon">(Coming Soon)</span></h3>
                 <p>VR web 3D experience through realms.</p>
                 <p><strong>Tech:</strong> VR, 3D, WebXR</p>
-                <a href="https://github.com/manugeni" target="_blank">GitHub</a>
+                <a href="https://github.com/manugeni/VirtuXperience" target="_blank">GitHub</a>
             </div>
             <div class="project">
                 <h3>Slay! <span class="coming-soon">(Coming Soon)</span></h3>
                 <p>Online game where you slay monsters.</p>
                 <p><strong>Tech:</strong> Game, Multiplayer, WebGL</p>
-                <a href="https://github.com/manugeni" target="_blank">GitHub</a>
+                <a href="https://github.com/manugeni/SlayGame/" target="_blank">GitHub</a>
             </div>
         </section>
     </main>
