--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <section id="favorite-video">
             <h2>My Favorite Inspiration</h2>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/jZlq1ALRHX" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/Go78C1YBXaE" frameborder="0" allowfullscreen></iframe>
             </div>
-            <p>King Vader's "When You Don’t Know Who You’re Robbin Pt. 2" - A vibe worth watching!</p>
+            <p>KingVader's "When You Don’t Know Who You’re Robbin Pt. 2" - A vibe worth watching!</p>
         </section>
     </main>
     <footer>
